--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tsharrk
 Type: Package
-Title: tsharrk Title Goes Here Otherwise CRAN Checks Fail
+Title: Tools to Make Analyses Using 'tshark' Easier
 Version: 0.1.0
 Date: 2021-07-26
 Authors@R: c(
@@ -8,7 +8,10 @@ Authors@R: c(
            comment = c(ORCID = "0000-0001-5670-2640"))
   )
 Maintainer: Bob Rudis <bob@rud.is>
-Description: A good description goes here otherwise CRAN checks fail.
+Description: The 'tshark' (<https://www.wireshark.org/docs/man-pages/tshark.html>)
+    command line utility comes with Wireshark and is a is useful when performing
+    analyses on packet captures (PCAPs). Tools are provided to make it a bit easier 
+    to work with 'tshark' to perform analyses with R.
 URL: https://git.rud.is/hrbrmstr/tsharrk
 BugReports: https://git.rud.is/hrbrmstr/tsharrk/issues
 Encoding: UTF-8
@@ -18,7 +21,9 @@ Suggests:
 Depends: 
     R (>= 3.6.0)
 Imports: 
-    httr,
-    jsonlite
+    utils,
+    arrow,
+    ndjson,
+    tools
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
