--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,5 @@ importFrom(tools,file_ext)
 importFrom(tools,file_path_sans_ext)
 importFrom(utils,browseURL)
 importFrom(utils,help)
+importFrom(utils,read.csv)
+importFrom(utils,tail)
